# glyphogen

./: analyze_dataset_stats.py  preprocess_for_hierarchical.py  pyproject.toml  train.py  train_segmentation.py
glyphogen/: callbacks.py  dataset.py  glyph.py  hyperparameters.py  inference.py  latent_encoder.py  losses.py  lstm.py  model.py  nodeglyph.py  scheduler.py  segmenter.py  svgglyph.py  typing.py  vectorizer.py
glyphogen/representations/: nodecommand.py
tests/: test_command_defs.py  test_data.py  test_dataset_integrity.py  test_glyph.py  test_hierarchical_data.py  test_losses.py  test_models.py  test_relative_polar.py  test_roundtrip.py  test_smooth_nodes.py
