[project]
name = "glyphogen"
version = "0.1.0"
description = ""
authors = [{ name = "Simon Cozens", email = "simon@simon-cozens.org" }]
readme = ""
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch>=1.11.0",
    "Pillow",
    "fonttools",
    "uharfbuzz",
    "scikit-learn",
    "tqdm",
    "more-itertools",
    "diskcache",
    "pkbar",
    "scikit-image",
    "tensorboard",
    "skia-pathops",
    "torchmetrics",
    "torchvision",
    "jaxtyping",
    "pycocotools",
    "kurbopy",
    "svgpathtools", # For pydiffvg
    "cssutils", # For pydiffvg
    "matplotlib", # for pydiffvg
]
# Also pydiffvg but that's not on pypi!

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
